--- a/style.css
+++ b/style.css
@@ -14,12 +14,14 @@ body {
 
 h1{
     font-family: 'Oswald', sans-serif;
+    color: antiquewhite;
 }
 .hero {
     display: flex;
     align-items: center;
     text-align: center;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    color: antiquewhite;
 }
 
 .hero img {
